[tool.poetry]
name = "ha_postgres_experiments"
version = "0.1.0"
description = ""
authors = ["Michal Bultrowicz <michal.bultrowicz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
psycopg2 = "^2.8"
tenacity = "^6.1"

[tool.poetry.dev-dependencies]
ptpython = "^3.0"
flake8 = "^3.7"
ipdb = "^0.12.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
